Revision history for HTTP-Message

{{$NEXT}}
    - Don't test Perl > 5.32 on Windows in GH Actions (GH#174) (Olaf Alders)

6.36      2022-01-05 14:39:42Z
    - Fix examples in HTTP::Request::Common synopsis: HTTP::Request::Common
      does not put headers in an arrayref, unlike HTTP::Request (GH#170) (Karen
      Etheridge)
    - Update to contributing information (GH#171) (Håkon Hægland)

6.35      2021-11-11 22:10:31Z
    - Clarify documentation for decoded_content (GH#166) (Eric Wastl)

6.34      2021-11-08 14:27:36Z
    - Catch case of empty name/value in header words split. (GH#168) (Galen Huntington)

6.33      2021-06-28 16:51:58Z
    - Allow `can` method to respond to delegated methods (GH#159) (nanto_vi,
      TOYAMA Nao)

6.32      2021-05-18 18:54:27Z
    - Use File::Spec for MSWin32 on Content-Disposition filename (GH#157)
      (tzccinct)

6.31      2021-05-11 18:07:37Z
    - Fix test writing to files (GH#156) (Michal Josef Špaček)

6.30      2021-05-10 14:55:55Z
    - Don't inherit from Exporter anymore (GH#155) (Max Maischein)
    - Remove superfluous Perl version requirement. This module requires Perl
      5.6 or newer. (GH#155) (Max Maischein)

6.29      2021-03-06 04:50:34Z
    - fix issue with HTTP::Request internal cache for canonical url when using
      URI::URL (GH#146) (andrew-grechkin)

6.28      2021-02-19 16:22:13Z
    - fix warnings during HTTP::Config->match #62 (GH#152) (Viťas Strádal)

6.27      2021-01-05 03:02:01Z
    - Clean up backcompat code (GH#148) (Dan Book)
    - Add "308 Permanent Redirect" to is_cacheable_by_default (GH#150) (simbabque)

6.26      2020-09-10 02:34:25Z
    - Update comment which explains in which RFC 451 is defined (GH#143) (Olaf
      Alders). Reported by Toby Inkster.
    - Fix HTTP status descriptions and add 425 Too Early (GH#145) (Dan Book)

6.25      2020-06-28 17:52:12Z
    - Don't run Changes test on master in GH actions
    - move Clone from required to suggests prerequisite, to re-enable